@@ -36,15 +36,22 @@ import org.dependencytrack.integrations.AbstractIntegrationPoint;
 import org.dependencytrack.integrations.PortfolioFindingUploader;
 import org.dependencytrack.model.Project;
 import org.dependencytrack.model.ProjectProperty;
+import org.dependencytrack.persistence.QueryManager;
 import org.dependencytrack.util.DebugDataEncryption;
 import org.json.JSONObject;
+import org.slf4j.MDC;
 
+import javax.jdo.Query;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
+import static org.dependencytrack.common.MdcKeys.MDC_PROJECT_NAME;
+import static org.dependencytrack.common.MdcKeys.MDC_PROJECT_UUID;
+import static org.dependencytrack.common.MdcKeys.MDC_PROJECT_VERSION;
+import static org.dependencytrack.model.ConfigPropertyConstants.KENNA_API_URL;
 import static org.dependencytrack.model.ConfigPropertyConstants.KENNA_CONNECTOR_ID;
 import static org.dependencytrack.model.ConfigPropertyConstants.KENNA_ENABLED;
 import static org.dependencytrack.model.ConfigPropertyConstants.KENNA_TOKEN;
@@ -53,8 +60,6 @@ public class KennaSecurityUploader extends AbstractIntegrationPoint implements P
 
     private static final Logger LOGGER = Logger.getLogger(KennaSecurityUploader.class);
     private static final String ASSET_EXTID_PROPERTY = "kenna.asset.external_id";
-    private static final String API_ROOT = "https://api.kennasecurity.com";
-    private static final String CONNECTOR_UPLOAD_URL = API_ROOT + "/connectors/%s/data_file";
 
     private String connectorId;
 
@@ -70,9 +75,8 @@ public class KennaSecurityUploader extends AbstractIntegrationPoint implements P
 
     @Override
     public boolean isEnabled() {
-        final ConfigProperty enabled = qm.getConfigProperty(KENNA_ENABLED.getGroupName(), KENNA_ENABLED.getPropertyName());
         final ConfigProperty connector = qm.getConfigProperty(KENNA_CONNECTOR_ID.getGroupName(), KENNA_CONNECTOR_ID.getPropertyName());
-        if (enabled != null && Boolean.valueOf(enabled.getPropertyValue()) && connector != null && connector.getPropertyValue() != null) {
+        if (qm.isEnabled(KENNA_ENABLED) && connector != null && connector.getPropertyValue() != null) {
             connectorId = connector.getPropertyValue();
             return true;
         }
@@ -83,23 +87,46 @@ public class KennaSecurityUploader extends AbstractIntegrationPoint implements P
     public InputStream process() {
         LOGGER.debug("Processing...");
         final KennaDataTransformer kdi = new KennaDataTransformer(qm);
-        for (final Project project : qm.getAllProjects()) {
-            final ProjectProperty externalId = qm.getProjectProperty(project, KENNA_ENABLED.getGroupName(), ASSET_EXTID_PROPERTY);
-            if (externalId != null && externalId.getPropertyValue() != null) {
-                LOGGER.debug("Transforming findings for project: " + project.getUuid() + " to KDI format");
-                kdi.process(project, externalId.getPropertyValue());
+
+        List<Project> projects = fetchNextProjectBatch(qm, null);
+        while (!projects.isEmpty()) {
+            if (Thread.currentThread().isInterrupted()) {
+                LOGGER.warn("Interrupted before all projects could be processed");
+                break;
             }
+
+            for (final Project project : projects) {
+                try (var ignoredMdcProjectUuid = MDC.putCloseable(MDC_PROJECT_UUID, project.getUuid().toString());
+                     var ignoredMdcProjectName = MDC.putCloseable(MDC_PROJECT_NAME, project.getName());
+                     var ignoredMdcProjectVersion = MDC.putCloseable(MDC_PROJECT_VERSION, project.getVersion())) {
+                    if (Thread.currentThread().isInterrupted()) {
+                        LOGGER.warn("Interrupted before project could be processed");
+                        break;
+                    }
+
+                    final ProjectProperty externalId = qm.getProjectProperty(project, KENNA_ENABLED.getGroupName(), ASSET_EXTID_PROPERTY);
+                    if (externalId != null && externalId.getPropertyValue() != null) {
+                        LOGGER.debug("Transforming findings to KDI format");
+                        kdi.process(project, externalId.getPropertyValue());
+                    }
+                }
+            }
+
+            qm.getPersistenceManager().evictAll(false, Project.class);
+            projects = fetchNextProjectBatch(qm, projects.getLast().getId());
         }
+
         return new ByteArrayInputStream(kdi.generate().toString().getBytes());
     }
 
     @Override
     public void upload(final InputStream payload) {
         LOGGER.debug("Uploading payload to KennaSecurity");
+        final ConfigProperty apiUrlProperty = qm.getConfigProperty(KENNA_API_URL.getGroupName(), KENNA_API_URL.getPropertyName());
         final ConfigProperty tokenProperty = qm.getConfigProperty(KENNA_TOKEN.getGroupName(), KENNA_TOKEN.getPropertyName());
         try {
             final String token = DebugDataEncryption.decryptAsString(tokenProperty.getPropertyValue());
-            HttpPost request = new HttpPost(String.format(CONNECTOR_UPLOAD_URL, connectorId));
+            HttpPost request = new HttpPost("%s/connectors/%s/data_file".formatted(apiUrlProperty.getPropertyValue(), connectorId));
             request.addHeader("X-Risk-Token", token);
             request.addHeader("accept", "application/json");
             List<NameValuePair> nameValuePairList = new ArrayList<>();
@@ -126,4 +153,24 @@ public class KennaSecurityUploader extends AbstractIntegrationPoint implements P
             LOGGER.error("An error occurred attempting to upload findings to Kenna Security", e);
         }
     }
+
+    private List<Project> fetchNextProjectBatch(final QueryManager qm, final Long lastId) {
+        // TODO: Shouldn't we only select active projects here?
+        //  This is existing behavior so we can't just change it.
+
+        final Query<Project> query = qm.getPersistenceManager().newQuery(Project.class);
+        if (lastId != null) {
+            query.setFilter("id > :lastId");
+            query.setParameters(lastId);
+        }
+        query.setOrdering("id asc");
+        query.setRange(0, 100);
+
+        try {
+            return List.copyOf(query.executeList());
+        } finally {
+            query.closeAll();
+        }
+    }
+
 }
